--- a/app/src/scss/layout/_header.scss
+++ b/app/src/scss/layout/_header.scss
@@ -12,6 +12,8 @@
 	@include pc {
 		z-index: 1000;
 		height: 70px;
+		background: #231808;
+		color: $white;
 	}
 	@include sp {
 		top: 0;
@@ -29,11 +31,19 @@
 	&__img {
 
 		&-left {
-			width: 15%;
+			width: 160px;
 			margin-right: auto;
 
+			img {
+				width: 160px;
+			}
+
 			@include sp {
-				width: 30%;
+				width: 140px;
+
+				img {
+					width: 140px;
+				}
 			}
 		}
 		&-line {
