--- a/app/src/pug/include/_header.pug
+++ b/app/src/pug/include/_header.pug
@@ -15,7 +15,7 @@ header.header#header
       .header__list__item
         a(href=path+"#anc-05").text-bold.menuLink05 よくある質問
     .header__img-line.pc-only
-      a(href="https://liff.line.me/2000447309-jgk2vKnZ/landing?follow=%40242mridi&lp=Dcgqh9&liff_id=2000447309-jgk2vKnZ")
+      a(href="./thanks.html")
         img(src=path+"/img/page/comment.png", alt="")
         p.header__img-line__txt LINEで無料相談
   .header__toggler
