--- a/app/src/pug/index.pug
+++ b/app/src/pug/index.pug
@@ -42,7 +42,7 @@ html(lang="ja")
                   | 東証スタンダード上場の株式会社ＳＹＳホールディングスのグループ企業、株式会社エスワイシステムが運営。
                 li 
                   span 3
-                  | 出世払い制度(ISA制度)とは、就職後に受講料をお支払いいただく出世払いの支払方法を指します。<br>また、就職保証制度もあり、就職できなければ受講料無料としています。
+                  | 出世払いとは、就職後に授業料をお支払いいただく支払方法（ISA制度）を指します。<br>また、就職保証制度もあり、就職できなければ受講料無料としています。
               ul 
                 li 
                   span
@@ -55,7 +55,7 @@ html(lang="ja")
               .FV-cta-left-box-ttl 初期費用0円！
               .FV-cta-left-box-txt 入学時に資金がなくても大丈夫。<br>在職中の方は給付金制度の対象の可能性も！
           .FV-cta-right
-            a(href="https://liff.line.me/2000447309-jgk2vKnZ/landing?follow=%40242mridi&lp=Dcgqh9&liff_id=2000447309-jgk2vKnZ") 
+            a(href="./thanks.html") 
                 img(src=path+"/img/page/cta.png", alt="エンジニアへの最短ルート")
       .FV-sp
         .FV-sp-main
@@ -75,7 +75,7 @@ html(lang="ja")
                 | 東証スタンダード上場の株式会社ＳＹＳホールディングスのグループ企業、株式会社エスワイシステムが運営。
               li 
                 span 3
-                | 出世払い制度(ISA制度)とは、就職後に受講料をお支払いいただく出世払いの支払方法を指します。<br>また、就職保証制度もあり、就職できなければ受講料無料としています。
+                | 出世払いとは、就職後に授業料をお支払いいただく支払方法（ISA制度）を指します。<br>また、就職保証制度もあり、就職できなければ受講料無料としています。
             ul 
               li 
                 span
@@ -88,10 +88,8 @@ html(lang="ja")
               .FV-cta-left-box-ttl 初期費用0円！
               .FV-cta-left-box-txt 入学時に資金がなくても大丈夫。<br>在職中の方は給付金制度の対象の可能性も！
           .FV-cta-right
-            a(href="https://liff.line.me/2000447309-jgk2vKnZ/landing?follow=%40242mridi&lp=Dcgqh9&liff_id=2000447309-jgk2vKnZ") 
+            a(href="./thanks.html") 
                 img(src=path+"/img/page/cta.png", alt="エンジニアへの最短ルート")
-          
-        
       section.worries 
         .section-wrapper 
           .section-ttl 
@@ -181,7 +179,7 @@ html(lang="ja")
                 .cta-content-item
                   img(src=path+"/img/page/cta_03.png", alt="STEP3 画面に従って予約 案内に従ってバナーをタップ！ 希望の日時で予約")
             .btn-line.FV-adj-btn
-              a(href="https://liff.line.me/2000447309-jgk2vKnZ/landing?follow=%40242mridi&lp=Dcgqh9&liff_id=2000447309-jgk2vKnZ") 
+              a(href="./thanks.html") 
                 .btn-line-img
                   img(src=path+"/img/page/cta-txt.png", alt="エンジニアへの最短ルート")
                 span.btn-line-txt LINEで無料相談
@@ -215,26 +213,7 @@ html(lang="ja")
                 h3.strengths-content-item-txt-head
                   span.txt-yellow 後払いもできる！
                   | <br>負担が少ない受講料
-                p.strengths-content-item-txt-text 就職後に最初のお給料から毎月1,2万円を選択していただきスクール料金のお支払いしていただくシステムになります。<br>入学時に資金がなくてもお気軽に通うことができますので是非ご活用ください！<br>でもISA支払いだと運営成り立つの？と疑問が生まれると思います。ですが職業訓練校で4000名のうち7割（3000名、グループ会社200名）以上の人たちを就職させた実績があるのと、IT道場のカリキュラムはエスワイシステムの研修と同じでありまして、その研修を受けたほとんどの方が現場が決まり、仕事をしていく力が身についているからです。なので就職に関しては絶対的な自信があります！
-
-      section.cta
-        .section-wrapper.cta-wrapper
-          .cta-area 
-            .cta-content
-              .cta-content-top 
-                img(src=path+"/img/page/cta_heading.png", alt="エンジニアへの最短ルート 無料相談 簡単3ステップ")
-              .cta-content-items 
-                .cta-content-item
-                  img(src=path+"/img/page/cta_01.png", alt="STEP1 ボタンをタップ 画面下の予約ボタンをタップ")
-                .cta-content-item
-                  img(src=path+"/img/page/cta_02.png", alt="STEP2 認証許可＆友達追加 認証許可して登録しよう")
-                .cta-content-item
-                  img(src=path+"/img/page/cta_03.png", alt="STEP3 画面に従って予約 案内に従ってバナーをタップ！ 希望の日時で予約")
-            .btn-line.FV-adj-btn
-              a(href="https://liff.line.me/2000447309-jgk2vKnZ/landing?follow=%40242mridi&lp=Dcgqh9&liff_id=2000447309-jgk2vKnZ") 
-                .btn-line-img
-                  img(src=path+"/img/page/cta-txt.png", alt="エンジニアへの最短ルート")
-                span.btn-line-txt LINEで無料相談
+                p.strengths-content-item-txt-text 就職後に最初のお給料から、スクール料金のお支払いしていただくISA制度がございます。毎月のお支払い金額はなんと1万円から！<br>入学時に資金がなくてもお気軽に通うことができますので是非ご活用ください！<br>でもISA支払いだと運営成り立つの？と疑問が生まれると思います。ですが職業訓練校で4000名のうち7割（3000名、グループ会社200名）以上の人たちを就職させた実績があるのと、IT道場のカリキュラムはエスワイシステムの研修と同じでありまして、その研修を受けたほとんどの方が現場が決まり、仕事をしていく力が身についているからです。なので就職に関しては絶対的な自信があります！
       section.voice#anc-02
         .section-wrapper 
           .section-ttl 
@@ -368,7 +347,7 @@ html(lang="ja")
                 .cta-content-item
                   img(src=path+"/img/page/cta_03.png", alt="STEP3 画面に従って予約 案内に従ってバナーをタップ！ 希望の日時で予約")
             .btn-line.FV-adj-btn
-              a(href="https://liff.line.me/2000447309-jgk2vKnZ/landing?follow=%40242mridi&lp=Dcgqh9&liff_id=2000447309-jgk2vKnZ") 
+              a(href="./thanks.html") 
                 .btn-line-img
                   img(src=path+"/img/page/cta-txt.png", alt="エンジニアへの最短ルート")
                 span.btn-line-txt LINEで無料相談
@@ -447,7 +426,7 @@ html(lang="ja")
                     span.plan-content-ttl-03-middle （出世払い制度）
                   span.plan-content-label.__bg-blue 特徴
                   h4.plan-content-ttl-04.__txt-blue 就職するまでお支払い不要
-                  p.plan-content-txt 勉強する意欲はあっても、初期費用の準備が難しい。そんな方への支援としてIT道場では「ISA制度」という、就職後に受講料をお支払いいただく出世払いの支払方法を準備しております。<br>ISA制度では就職するまで受講料のお支払いが不要な支払い方法を選択して、入稿いただくこともできます。
+                  p.plan-content-txt 勉強する意欲はあっても、初期費用の準備が難しい。そんな方への支援としてIT道場では「ISA制度」という、就職後に受講料をお支払いいただく出世払いの支払方法を準備しております。<br>ISA制度では就職するまで受講料のお支払いが不要な支払い方法を選択して、入校いただくこともできます。
                   h4.plan-content-ttl-04 制度利用例
                   .plan-content-ex 
                     .plan-content-ex-noISA
@@ -464,7 +443,7 @@ html(lang="ja")
                         span.plan-content-label.__bg-black.mt-16 就職時の授業料
                         p.plan-content-ex-large 420,000円
                           span.plan-content-ex-middle （税込）
-                        p.plan-content-txt IT道場を卒業、就職先が決定までの授業料のお支払い義務は致しません。
+                        p.plan-content-txt IT道場を卒業、就職先が決定するまで、授業料のお支払い義務は発生いたしません
               .plan-content-02
                 .plan-content-container
                   span.plan-content-num.__bg-orange 02
@@ -516,7 +495,7 @@ html(lang="ja")
                 .cta-content-item
                   img(src=path+"/img/page/cta_03.png", alt="STEP3 画面に従って予約 案内に従ってバナーをタップ！ 希望の日時で予約")
             .btn-line.FV-adj-btn
-              a(href="https://liff.line.me/2000447309-jgk2vKnZ/landing?follow=%40242mridi&lp=Dcgqh9&liff_id=2000447309-jgk2vKnZ") 
+              a(href="./thanks.html") 
                 .btn-line-img
                   img(src=path+"/img/page/cta-txt.png", alt="エンジニアへの最短ルート")
                 span.btn-line-txt LINEで無料相談
